Copy secrets to a readable location for --users

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,33 +1,27 @@
 .PHONY : build run-staging run-prod stop run-proxy-amazon run-prod-secrets
-.PHONY : zombie-maker-debian-binary
+.PHONY : .zombie-maker-debian-binary
 
-TAG:=`git describe --abbrev=0 --tags`
+TAG:=`git describe --tags`
 
-build: zombie-maker  .mk.nginx-with-dockerfy
-	docker build -t dockerfied-nginx .
-
-push: .mk.nginx-with-dockerfy
-	docker push markriggins/nginx-with-dockerfy
-
-.mk.nginx-with-dockerfy: Dockerfile.nginx-with-dockerfy
-	cd ..; make dist
-	cp -f ../dist/linux/amd64/dockerfy .dockerfy-linux-amd64
-	docker build --file Dockerfile.nginx-with-dockerfy -t markriggins/nginx-with-dockerfy .
-	docker tag markriggins/nginx-with-dockerfy markriggins/nginx-with-dockerfy:$(TAG)
+build: .zombie-maker-debian-binary .mk.nginx-with-dockerfy-and-zombie-maker
 
 
+.mk.nginx-with-dockerfy-and-zombie-maker: 
+	cd .. && make nginx-with-dockerfy
+	docker build -t  nginx-with-dockerfy-and-zombie-maker .
 
-zombie-maker: zombie-maker.c
+
+.zombie-maker-debian-binary: zombie-maker.c
 	# build a native and debian binary
-	docker run --rm -v "$(PWD)":/tmp -w /tmp gcc gcc -o zombie-maker-debian-binary zombie-maker.c
-	gcc -o zombie-maker zombie-maker.c
+	docker run --rm -v "$(PWD)":/tmp -w /tmp gcc gcc -o .zombie-maker-debian-binary zombie-maker.c
+	# gcc -o zombie-maker zombie-maker.c
 
 
 stop:
-	@docker rm -f dockerfied-nginx 2>/dev/null || true
+	@docker rm -f test-nginx 2>/dev/null || true
 
 run-staging: stop
-	docker run -d -p 80:80 -e DEPLOYMENT_ENV=staging --name dockerfied-nginx dockerfied-nginx \
+	docker run -d -p 80:80 -e DEPLOYMENT_ENV=staging --name test-nginx test-nginx \
 		     --overlay /tmp/overlays/_common/html:/usr/share/nginx/ \
 		     --overlay /tmp/overlays/MISSING/html:/usr/share/nginx/ \
 	         --overlay '/tmp/overlays/$$DEPLOYMENT_ENV/html:/usr/share/nginx/' \
@@ -36,21 +30,21 @@ run-staging: stop
 	open http://$(shell docker-machine ip $(shell docker-machine active))
 
 run-prod: stop
-	docker run -d -p 80:80 -e DEPLOYMENT_ENV=prod --name dockerfied-nginx dockerfied-nginx \
+	docker run -d -p 80:80 -e DEPLOYMENT_ENV=prod --name test-nginx nginx-with-dockerfy-and-zombie-maker \
 		     --overlay /tmp/overlays/_common/html:/usr/share/nginx/ \
 	         --overlay '/tmp/overlays/$$DEPLOYMENT_ENV/html:/usr/share/nginx/' \
 	         -- nginx
 	open http://$(shell docker-machine ip $(shell docker-machine active))/robots.txt
 
 run-proxy-amazon: stop
-	docker run -d -p 80:80 -e PROXY_PASS_URL="https://www.amazon.com/" --name dockerfied-nginx dockerfied-nginx
+	docker run -d -p 80:80 -e PROXY_PASS_URL="https://www.amazon.com/" --name test-nginx nginx-with-dockerfy-and-zombie-maker
 	open http://$(shell docker-machine ip $(shell docker-machine active))
 
 run-prod-secrets: stop
-	docker run -d -p 80:80 -e DEPLOYMENT_ENV=prod --name dockerfied-nginx \
+	docker run -d -p 80:80 -e DEPLOYMENT_ENV=prod --name test-nginx \
 				-v $(PWD):/secrets \
 				-e SECRETS_FILE=/secrets/secrets.env \
-				dockerfied-nginx \
+				nginx-with-dockerfy-and-zombie-maker \
 					--verbose \
 					--overlay /tmp/overlays/_common/:/usr/share/nginx/ \
 					--overlay '/tmp/overlays/{{ .Env.DEPLOYMENT_ENV }}/html:/usr/share/nginx/' \
@@ -60,7 +54,8 @@ run-prod-secrets: stop
 	open http://$(shell docker-machine ip $(shell docker-machine active))/secrets.html
 
 
-test: start-tests run-zombie-test run-service-stops-too-soon-test run-primary-stops-while-service-is-running-test run-before-primary-test run-primary-service-exits
+test: start-tests run-zombie-test run-service-stops-too-soon-test run-primary-stops-while-service-is-running-test \
+		run-before-primary-test run-primary-service-exits run-wait-test run-user-option-test
 	@echo "\n\nALL TESTS PASSED"
 
 start-tests:
@@ -70,10 +65,10 @@ start-tests:
 run-zombie-test: 
 	@echo "\n\nRunning Zombie Test -- expect 10 zombies to get reaped"
 	@echo "################################################################################"
-	@docker rm -f dockerfied-nginx 2>/dev/null || true
-	@echo "\nRun zombie-maker inside dockerfied-nginx"
+	@docker rm -f test-nginx 2>/dev/null || true
+	@echo "\nRun zombie-maker inside test-nginx"
 	@echo "--------------------------------------------------------------------------"
-	docker run -d --name dockerfied-nginx dockerfied-nginx --verbose --reap --reap-poll-interval 2s \
+	docker run -d --name test-nginx nginx-with-dockerfy-and-zombie-maker --verbose --reap --reap-poll-interval 2s \
 		--run zombie-maker 10 1 -- \
 		--run sleep 3 -- \
 		--run ps -ef -- \
@@ -81,36 +76,36 @@ run-zombie-test:
 	@sleep 5
 	@echo "\nPs -ef looking initial zombies"
 	@echo "--------------------------------------------------------------------------"
-	docker exec dockerfied-nginx ps -ef | egrep defunct
+	docker exec test-nginx ps -ef | egrep defunct
 	
 	@sleep 5
 	@echo "\nPs -ef looking for leftover zombies -- should be empty"
 	@echo "--------------------------------------------------------------------------"
-	docker exec dockerfied-nginx ps -ef | egrep defunct || true
-	@docker exec dockerfied-nginx ps -ef | egrep -q defunct  && exit 1 || true
+	docker exec test-nginx ps -ef | egrep defunct || true
+	@docker exec test-nginx ps -ef | egrep -q defunct  && exit 1 || true
 
 	@echo "\nLogs"
 	@echo "--------------------------------------------------------------------------"
-	@docker logs dockerfied-nginx 
+	@docker logs test-nginx 
 
-	@docker logs dockerfied-nginx 2>&1| egrep -q 'Reaped 10 zombies' || (echo FAILED TO REAP; exit 1)
+	@docker logs test-nginx 2>&1| egrep -q 'Reaped 10 zombies' || (echo FAILED TO REAP; exit 1)
 
 	@echo "run-zombie-test PASSED"
-	@docker rm -f dockerfied-nginx 2>/dev/null || true
+	@docker rm -f test-nginx 2>/dev/null || true
 
 
 run-service-stops-too-soon-test: 
 	@echo "\n\nRunning 'run-service-stops-too-soon-test'"
 	@echo "\tWhen the service exits, the primary command should also stop"
 	@echo "################################################################################"
-	@docker rm -f dockerfied-nginx 2>/dev/null || true
-	docker run -d -it --name dockerfied-nginx dockerfied-nginx --verbose \
+	@docker rm -f test-nginx 2>/dev/null || true
+	docker run -d -it --name test-nginx nginx-with-dockerfy-and-zombie-maker --verbose \
 		--start bash -c 'sleep 5 && echo "service exiting"' -- \
 		sleep 10 >/dev/null
 	@sleep 7
-	docker logs dockerfied-nginx 2>&1 | egrep -q 'Service.*stopped' 
+	docker logs test-nginx 2>&1 | egrep -q 'Service.*stopped' 
 	@echo "\t Service Stopped"
-	@docker rm -f dockerfied-nginx 2>/dev/null || true
+	@docker rm -f test-nginx 2>/dev/null || true
 	@echo "run-service-stops-too-soon-test PASSED"
 
 
@@ -118,16 +113,16 @@ run-primary-stops-while-service-is-running-test:
 	@echo "\n\nRunning 'run-primary-stops-while-service-is-running-test'"
 	@echo "\tThis should kill the services before they have a chance to finish"
 	@echo "################################################################################"
-	@docker rm -f dockerfied-nginx 2>/dev/null || true
-	docker run -d -it --name dockerfied-nginx dockerfied-nginx --verbose \
+	@docker rm -f test-nginx 2>/dev/null || true
+	docker run -d -it --name test-nginx nginx-with-dockerfy-and-zombie-maker --verbose \
 		--start bash -c 'sleep 10 && echo "ERROR: service-1 STILL RUNNING"' -- \
 		--start bash -c 'sleep 10 && echo "ERROR: service-2 STILL RUNNING"' -- \
 		--start bash -c 'sleep 10 && echo "ERROR: service-3 STILL RUNNING"' -- \
 		sleep 5 >/dev/null
 	@sleep 7
-	@docker logs dockerfied-nginx 2>&1  | egrep -q 'Primary Command.*stopped'
-	@docker logs dockerfied-nginx 2>&1  | egrep -q '^ERROR:.*STILLRUNNING' && exit 1 || true
-	@docker rm -f dockerfied-nginx 2>/dev/null || true
+	@docker logs test-nginx 2>&1  | egrep -q 'Primary Command.*stopped'
+	@docker logs test-nginx 2>&1  | egrep -q '^ERROR:.*STILLRUNNING' && exit 1 || true
+	@docker rm -f test-nginx 2>/dev/null || true
 	@echo "run-primary-stops-while-service-is-running-test PASSED"
 	
 
@@ -135,56 +130,63 @@ run-before-primary-test:
 	@echo "\n\nrun-before-primary-test:"
 	@echo "\tBefore the service starts, the -run commands should finish in order"
 	@echo "################################################################################"
-	@docker rm -f dockerfied-nginx 2>/dev/null || true
-	docker run -d -it --name dockerfied-nginx dockerfied-nginx --verbose \
+	@docker rm -f test-nginx 2>/dev/null || true
+	docker run -d -it --name test-nginx nginx-with-dockerfy-and-zombie-maker --verbose \
 		--run bash -c 'sleep 3; echo "1 DONE"' -- \
 		--run bash -c 'sleep 2; echo "2 DONE"' -- \
 		--run bash -c 'echo "3 DONE"' -- \
 		bash -c "sleep 4; echo '4 PRIMARY COMMAND DONE'"
 	@sleep 15
-	docker logs dockerfied-nginx 2>&1 | egrep -q '^1 DONE' 
-	docker logs dockerfied-nginx 2>&1 | egrep -q '^2 DONE' 
-	docker logs dockerfied-nginx 2>&1 | egrep -q '^3 DONE' 
-	docker logs dockerfied-nginx 2>&1 | egrep -q '^4 PRIMARY COMMAND DONE' 
-	@docker rm -f dockerfied-nginx 2>/dev/null || true
+	docker logs test-nginx 2>&1 | egrep -q '^1 DONE' 
+	docker logs test-nginx 2>&1 | egrep -q '^2 DONE' 
+	docker logs test-nginx 2>&1 | egrep -q '^3 DONE' 
+	docker logs test-nginx 2>&1 | egrep -q '^4 PRIMARY COMMAND DONE' 
+	@docker rm -f test-nginx 2>/dev/null || true
 	@echo "run-before-primary-test PASSED"
 
 run-primary-service-exits:
-	@docker rm -f dockerfied-nginx-container 2>/dev/null || true
+	@docker rm -f test-nginx 2>/dev/null || true
 	@echo "\n\nrun-primary-service-exits:"
 	@echo "\tVerify that when the primary service finishes, the container exits"
 	@echo "################################################################################"
-	docker run -it --name dockerfied-nginx-container dockerfied-nginx --verbose echo DONE 
-	docker inspect --format '{{ .State.Status }}' dockerfied-nginx-container  | egrep -q exited
-	@docker rm -f dockerfied-nginx-container 2>/dev/null || true
+	docker run -it --name test-nginx nginx-with-dockerfy-and-zombie-maker --verbose echo DONE 
+	docker inspect --format '{{ .State.Status }}' test-nginx | egrep -q exited
+	@docker rm -f test-nginx 2>/dev/null || true
 	@echo "run-primary-service-exits PASSED"
 
 
 run-wait-test:
-	@docker rm -f dockerfied-nginx-container 2>/dev/null || true
+	@docker rm -f test-nginx 2>/dev/null || true
 	@echo "\n\nrun-wait-test:"
 	@echo "\tVerify that when the primary command runs after we wait for something"
 	@echo "################################################################################"
-	docker run -it --name dockerfied-nginx-container dockerfied-nginx --verbose \
+	docker run -it --name test-nginx nginx-with-dockerfy-and-zombie-maker --verbose \
 		--wait http://amazon.com \
 		echo DONE
-	docker logs dockerfied-nginx-container 2>&1 | egrep -q '^DONE'
+	docker logs test-nginx 2>&1 | egrep -q '^DONE'
 	@echo "run-wait-test PASSED"
 
 run-user-option-test:
-	@docker rm -f dockerfied-nginx-container 2>/dev/null || true
+	@docker rm -f test-nginx 2>/dev/null || true
 	@echo "\n\nrun-user-option-test:"
 	@echo "\tVerify that the --user option affects the user account of subsequent commands"
 	@echo "################################################################################"
-	docker run -d -it --name dockerfied-nginx-container dockerfied-nginx \
+	docker run -d -it -e SECRETS_FILE=/secrets/secrets.json --name test-nginx nginx-with-dockerfy-and-zombie-maker \
 		--run echo -n "MAIL:" -- --user mail  --run id -a -- \
+		--run ls -l '/var/spool/mail/.secrets' -- \
+		--run /usr/bin/env -- \
 		--run echo -n "ROOT:" -- --user root  --run id -a -- \
-		--run echo -n "UUCP:" -- --user uucp  --run id -a -- \
+		--run /usr/bin/env -- \
 		--run echo -n "PRIMARY:" -- \
 		id -a
 	@sleep 5
-	docker logs dockerfied-nginx-container 2>/dev/null| egrep -v "^dockerfy"
-	@docker rm -f dockerfied-nginx 2>/dev/null || true
+	docker logs test-nginx 2>/dev/null| egrep -q -- '\-r\-* .*secrets.json'
+	docker logs test-nginx 2>/dev/null| egrep -q -- 'SECRETS_FILE=/var/mail/.secrets/secrets.json'
+	docker logs test-nginx 2>/dev/null| egrep -q -- 'SECRETS_FILE=/secrets/secrets.json'
+	docker logs test-nginx 2>/dev/null| fgrep -q -- 'ROOT:uid=0(root) gid=0(root) groups=0(root)'
+	docker logs test-nginx 2>/dev/null| fgrep -q -- 'MAIL:uid=8(mail) gid=8(mail) groups=8(mail)'
+
+	@docker rm -f test-nginx 2>/dev/null || true
 	@echo "run-user-option-test PASSED"
 
 
