--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -15,7 +15,10 @@ COPY default.conf.tmpl /etc/nginx/conf.d/default.conf.tmpl
 
 COPY overlays /tmp/overlays
 COPY .zombie-maker-debian-binary /usr/local/bin/zombie-maker
+
+# normally /secrets would be a mounted volume
 COPY secrets.json /secrets/secrets.json
+COPY secrets.2.json /secrets/secrets.2.json
  
 EXPOSE 80
 
