--- a/test/Makefile
+++ b/test/Makefile
@@ -219,13 +219,15 @@ run-option-expansion-test:
 	@echo "################################################################################"
 	docker run -d -it -e SECRETS_FILES=/secrets/secrets.json \
 		-e DB_NAME="My-Db" -e DB_HOST=localhost  \
+		-e SC_ENV=local \
 	    --name test-nginx nginx-with-dockerfy-and-zombie-maker \
 	    --verbose \
-		--secrets-files /secrets/secrets.2.json \
+		--secrets-files '/secrets/secrets.2.json:/secrets/secrets.{{ .Env.SC_ENV }}.json' \
 	    --run echo 'DB_HOST={{ .Env.DB_HOST }}' -- \
 		--run echo 'DB_NAME_XP_1=$$DB_NAME' -- \
 		--run echo 'DB_NAME_XP_2={{ .Env.DB_NAME }}' --  \
 		--run echo 'AnotherSecret={{ .Secret.AnotherSecret }}' -- \
+		--run echo 'HOW_TO_FIND_A_GOOD_RESTAURANT={{ .Secret.HOW_TO_FIND_A_GOOD_RESTAURANT }}' -- \
 		echo 'JSON_SECRET={{ .Secret.JSON_SECRET }}'
 
 
@@ -236,6 +238,7 @@ run-option-expansion-test:
 	docker logs test-nginx 2>/dev/null | fgrep -q -- 'AnotherSecret=Jason Voorhees is still alive'
 	docker logs test-nginx 2>/dev/null | fgrep -q -- 'DB_NAME_XP_1=$$DB_NAME'
 	docker logs test-nginx 2>/dev/null | fgrep -q -- 'DB_NAME_XP_2=My-Db'
+	docker logs test-nginx 2>/dev/null | fgrep -q -- 'HOW_TO_FIND_A_GOOD_RESTAURANT=Ask a local'
 
 	# @docker rm -f test-nginx >/dev/null 2>&1 || true
 	@echo "run-option-expansion-test PASSED"
