--- a/test/Makefile
+++ b/test/Makefile
@@ -6,7 +6,7 @@ TAG:=`git describe --tags`
 build: .zombie-maker-debian-binary .mk.nginx-with-dockerfy-and-zombie-maker
 
 
-.mk.nginx-with-dockerfy-and-zombie-maker: 
+.mk.nginx-with-dockerfy-and-zombie-maker:
 	cd .. && make nginx-with-dockerfy
 	docker build -t  nginx-with-dockerfy-and-zombie-maker .
 
@@ -59,82 +59,72 @@ run-prod-secrets: stop
 test: build just-test
 
 just-test: start-tests run-zombie-test run-service-stops-too-soon-test run-primary-stops-while-service-is-running-test \
-		run-before-primary-test run-primary-service-exits run-wait-test run-user-option-test run-option-expansion-test
+		run-before-primary-test run-fails-before-primary-test run-primary-service-exits run-wait-test run-user-option-test run-option-expansion-test run-exit-code-test
 	@echo "\n\nALL TESTS PASSED"
 
 start-tests:
 	@echo "\nRunning all tests"
 	@echo "################################################################################"
 
-run-zombie-test: 
+run-zombie-test:
 	@echo "\n\nRunning Zombie Test -- expect 10 zombies to get reaped"
 	@echo "################################################################################"
 	@docker rm -f test-nginx >/dev/null 2>&1 || true
 
 	@echo "\nRun zombie-maker inside test-nginx"
 	@echo "--------------------------------------------------------------------------"
-	docker run -d --name test-nginx nginx-with-dockerfy-and-zombie-maker --verbose --reap --reap-poll-interval 2s \
+	docker run --name test-nginx nginx-with-dockerfy-and-zombie-maker --verbose --reap --reap-poll-interval 2s \
 		--run zombie-maker 10 1 -- \
 		--run sleep 3 -- \
 		--run ps -ef -- \
-		sleep 120 >/dev/null
-	@sleep 5
-	@echo "\nPs -ef looking initial zombies"
+		sleep 10 >/dev/null 2>&1
+	@echo "\nLooking for <defunct> processes found by the above 'ps -ef'"
 	@echo "--------------------------------------------------------------------------"
-	docker exec test-nginx ps -ef | egrep defunct
-	
-	@sleep 5
-	@echo "\nPs -ef looking for leftover zombies -- should be empty"
-	@echo "--------------------------------------------------------------------------"
-	docker exec test-nginx ps -ef | egrep defunct || true
-	@docker exec test-nginx ps -ef | egrep -q defunct  && exit 1 || true
+	[ `docker logs test-nginx 2>&1 | egrep defunct | wc -l` == 10 ]
 
-	@echo "\nLogs"
+	@echo "\nMake sure all 10 zombies got reaped"
 	@echo "--------------------------------------------------------------------------"
-	@docker logs test-nginx 
-
 	@docker logs test-nginx 2>&1| egrep -q 'Reaped 10 zombies' || (echo FAILED TO REAP; exit 1)
 
 	@echo "run-zombie-test PASSED"
-	@docker rm -f test-nginx >/dev/null 2>&1 || true
 
 
 
-run-service-stops-too-soon-test: 
+run-service-stops-too-soon-test:
 	@echo "\n\nRunning 'run-service-stops-too-soon-test'"
 	@echo "\tWhen the service exits, the primary command should also stop"
 	@echo "################################################################################"
 	@docker rm -f test-nginx >/dev/null 2>&1 || true
 
-	docker run -d -it --name test-nginx nginx-with-dockerfy-and-zombie-maker --verbose \
-		--start bash -c 'sleep 5 && echo "service exiting"' -- \
-		sleep 10 >/dev/null
-	@sleep 7
-	docker logs test-nginx 2>&1 | egrep -q 'Service.*stopped' 
-	@echo "\t Service Stopped"
-	@docker rm -f test-nginx >/dev/null 2>&1 || true
+	docker run -it --name test-nginx nginx-with-dockerfy-and-zombie-maker --verbose \
+		--start bash -c 'sleep 5 && echo "SERVICE EXITED"' -- \
+		bash -c 'sleep 10 && echo "PRIMARY COMMAND FINISHED"' >/dev/null 2>&1 || true
+	docker logs test-nginx 2>&1 | egrep -q '^SERVICE EXITED'
+	docker logs test-nginx 2>&1 | egrep -q '^PRIMARY COMMAND FINISHED' && exit 1 || true
 
 	@echo "run-service-stops-too-soon-test PASSED"
 
 
-run-primary-stops-while-service-is-running-test: 
+run-primary-stops-while-service-is-running-test:
 	@echo "\n\nRunning 'run-primary-stops-while-service-is-running-test'"
 	@echo "\tThis should kill the services before they have a chance to finish"
 	@echo "################################################################################"
 	@docker rm -f test-nginx >/dev/null 2>&1 || true
 
-	docker run -d -it --name test-nginx nginx-with-dockerfy-and-zombie-maker --verbose \
-		--start bash -c 'sleep 10 && echo "ERROR: service-1 STILL RUNNING"' -- \
-		--start bash -c 'sleep 10 && echo "ERROR: service-2 STILL RUNNING"' -- \
-		--start bash -c 'sleep 10 && echo "ERROR: service-3 STILL RUNNING"' -- \
-		sleep 5 >/dev/null
-	@sleep 7
-	@docker logs test-nginx 2>&1  | egrep -q 'Primary Command.*stopped'
-	@docker logs test-nginx 2>&1  | egrep -q '^ERROR:.*STILLRUNNING' && exit 1 || true
+	docker run -it -d --name test-nginx nginx-with-dockerfy-and-zombie-maker --verbose \
+		--start bash -c 'sleep 60 && echo "ERROR: service-1 STILL RUNNING"' -- \
+		--start bash -c 'sleep 60 && echo "ERROR: service-2 STILL RUNNING"' -- \
+		--start bash -c 'sleep 60 && echo "ERROR: service-3 STILL RUNNING"' -- \
+		bash -c 'sleep 1; echo "PRIMARY DONE"'
+	@sleep 5
+	[ `docker inspect --format '{{.State.Status}}' test-nginx` == 'exited' ]
+	[ `docker logs test-nginx 2>&1  | egrep -c '^ERROR:.*STILL RUNNING'` == 0 ]
+	@docker logs test-nginx 2>&1  | egrep -q 'Primary Command.*finished'
+	@docker logs test-nginx 2>&1  | egrep -q 'PRIMARY DONE'
 	@docker rm -f test-nginx >/dev/null 2>&1 || true
 
 	@echo "run-primary-stops-while-service-is-running-test PASSED"
-	
+
 
 run-before-primary-test:
 	@echo "\n\nrun-before-primary-test:"
@@ -142,17 +132,30 @@ run-before-primary-test:
 	@echo "################################################################################"
 	@docker rm -f test-nginx >/dev/null 2>&1 || true
 
-	docker run -d -it --name test-nginx nginx-with-dockerfy-and-zombie-maker --verbose \
+	docker run -it --name test-nginx nginx-with-dockerfy-and-zombie-maker --verbose \
 		--run bash -c 'sleep 3; echo "1 DONE"' -- \
 		--run bash -c 'sleep 2; echo "2 DONE"' -- \
 		--run bash -c 'echo "3 DONE"' -- \
-		bash -c "sleep 4; echo '4 PRIMARY COMMAND DONE'"
-	@sleep 15
-	docker logs test-nginx 2>&1 | egrep -q '^1 DONE' 
-	docker logs test-nginx 2>&1 | egrep -q '^2 DONE' 
-	docker logs test-nginx 2>&1 | egrep -q '^3 DONE' 
-	docker logs test-nginx 2>&1 | egrep -q '^4 PRIMARY COMMAND DONE' 
+		bash -c "sleep 4; echo '4 PRIMARY COMMAND DONE'" >/dev/null 2>&1
+	docker logs test-nginx 2>&1 | egrep -q '^1 DONE'
+	docker logs test-nginx 2>&1 | egrep -q '^2 DONE'
+	docker logs test-nginx 2>&1 | egrep -q '^3 DONE'
+	docker logs test-nginx 2>&1 | egrep -q '^4 PRIMARY COMMAND DONE'
+
+	@echo "run-before-primary-test PASSED"
+
+
+run-fails-before-primary-test:
+	@echo "\n\nrun-fails-before-primary-test:"
+	@echo "\tIf a --run command fails, the primary command should never start"
+	@echo "################################################################################"
 	@docker rm -f test-nginx >/dev/null 2>&1 || true
+
+	docker run -it --name test-nginx nginx-with-dockerfy-and-zombie-maker --verbose \
+		--run bash -c 'echo "RUN COMMAND FAILED"; exit 1' -- \
+		bash -c "echo 'PRIMARY COMMAND DONE'" >/dev/null 2>&1 || true
+	docker logs test-nginx 2>&1 | egrep -q '^RUN COMMAND FAILED'
+	docker logs test-nginx 2>&1 | egrep -q '^PRIMARY COMMAND DONE' && exit 1 || true
 
 	@echo "run-before-primary-test PASSED"
 
@@ -162,9 +165,9 @@ run-primary-service-exits:
 	@echo "\n\nrun-primary-service-exits:"
 	@echo "\tVerify that when the primary service finishes, the container exits"
 	@echo "################################################################################"
-	docker run -it --name test-nginx nginx-with-dockerfy-and-zombie-maker --verbose echo DONE 
+	docker run -it --name test-nginx nginx-with-dockerfy-and-zombie-maker --verbose echo DONE
 	docker inspect --format '{{ .State.Status }}' test-nginx | egrep -q exited
-	@docker rm -f test-nginx >/dev/null 2>&1 || true
+	docker logs test-nginx 2>&1 | egrep -q '^DONE'
 
 	@echo "run-primary-service-exits PASSED"
 
@@ -178,6 +181,7 @@ run-wait-test:
 	docker run -it --name test-nginx nginx-with-dockerfy-and-zombie-maker --verbose \
 		--wait http://amazon.com \
 		echo DONE
+	docker logs test-nginx 2>&1 | egrep -q 'Waiting for host: http://amazon.com'
 	docker logs test-nginx 2>&1 | egrep -q '^DONE'
 	@echo "run-wait-test PASSED"
 
@@ -187,7 +191,7 @@ run-user-option-test:
 	@echo "\n\nrun-user-option-test:"
 	@echo "\tVerify that the --user option affects the user account of subsequent commands"
 	@echo "################################################################################"
-	docker run -d -it -e SECRETS_FILES=/secrets/secrets.json:/secrets/secrets.2.json \
+	docker run -it -e SECRETS_FILES=/secrets/secrets.json:/secrets/secrets.2.json \
 	    --name test-nginx nginx-with-dockerfy-and-zombie-maker \
 		--run echo -n "MAIL:" -- --user mail  --run id -a -- \
 		--run ls -l '/var/spool/mail/.secrets' -- \
@@ -197,8 +201,7 @@ run-user-option-test:
 		--run echo -n "ROOT:" -- --user root  --run id -a -- \
 		--run /usr/bin/env -- \
 		--run echo -n "PRIMARY:" -- \
-		id -a
-	@sleep 5
+		id -a >/dev/null 2>&1
 	docker logs test-nginx 2>/dev/null| egrep -q -- '\-r\-* .*secrets.json'
 
 	docker logs test-nginx 2>/dev/null| fgrep -q -- 'SECRETS_FILE=/var/mail/.secrets/combined_secrets.json'
@@ -217,7 +220,7 @@ run-option-expansion-test:
 	@echo "\n\nrun-option-expansion-test:"
 	@echo "\tVerify that {{ .Env.VARS }} are expanded before use by dockerfy and \$$VARS are NOT"
 	@echo "################################################################################"
-	docker run -d -it -e SECRETS_FILES=/secrets/secrets.json \
+	docker run -it -e SECRETS_FILES=/secrets/secrets.json \
 		-e DB_NAME="My-Db" -e DB_HOST=localhost  \
 		-e SC_ENV=local \
 	    --name test-nginx nginx-with-dockerfy-and-zombie-maker \
@@ -230,9 +233,7 @@ run-option-expansion-test:
 		--run echo 'HOW_TO_FIND_A_GOOD_RESTAURANT={{ .Secret.HOW_TO_FIND_A_GOOD_RESTAURANT }}' -- \
 		echo 'JSON_SECRET={{ .Secret.JSON_SECRET }}'
 
-
-	@sleep 5
-	docker logs test-nginx 2>/dev/null 
+	docker logs test-nginx 2>/dev/null
 	docker logs test-nginx 2>/dev/null | fgrep -q -- 'DB_HOST=localhost'
 	docker logs test-nginx 2>/dev/null | fgrep -q -- 'JSON_SECRET=Jason Voorhees did it'
 	docker logs test-nginx 2>/dev/null | fgrep -q -- 'AnotherSecret=Jason Voorhees is still alive'
@@ -242,7 +243,18 @@ run-option-expansion-test:
 
 	# @docker rm -f test-nginx >/dev/null 2>&1 || true
 	@echo "run-option-expansion-test PASSED"
-		
 
+
+run-exit-code-test:
+	@echo "\n\nrun-exit-code-test:"
+	@echo "\tVerify that dockerfy exits with the exit_code of the failing command"
+	@echo "################################################################################"
+	docker run -it --rm nginx-with-dockerfy-and-zombie-maker --verbose \
+		-- bash -c 'exit 5' >/dev/null 2>&1 || [ $$? == 5 ]
+	docker run -it --rm nginx-with-dockerfy-and-zombie-maker --verbose \
+		--run bash -c 'exit 3' -- bash -c 'exit 5' >/dev/null 2>&1 || [ $$? == 3 ]
+	docker run -it --rm nginx-with-dockerfy-and-zombie-maker --verbose \
+		--start bash -c 'sleep 2; exit 3' -- bash -c 'exit 5' >/dev/null 2>&1 || [ $$? == 5 ]
+	@echo "run-exit-code-test PASSED"
 
 
